--- a/E-journal/E-journal.csproj
+++ b/E-journal/E-journal.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Student\" />
+  </ItemGroup>
+
 </Project>
