--- a/E-journal/E-journal.csproj
+++ b/E-journal/E-journal.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Student\" />
+    <Folder Include="wwwroot\Student\Photo\" />
   </ItemGroup>
 
 </Project>
